# debate_with_crewai

./: .env.example  LICENSE  README.md  pyproject.toml
output/: decide.md  oppose.md  propose.md
