[project]
name = "debate"
version = "0.1.0"
description = "A CrewAI multi-agent debate: two debaters argue a motion and a judge decides."
authors = [{ name = "Parth Khungar", email = "parthkhungar33@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
debate = "debate.main:run"
run_crew = "debate.main:run"
train = "debate.main:train"
replay = "debate.main:replay"
test = "debate.main:test"
run_with_trigger = "debate.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
